--- a/package.json
+++ b/package.json
@@ -23,9 +23,6 @@
     "url": "https://github.com/mel-miller/sb-drupal/issues"
   },
   "homepage": "https://github.com/mel-miller/sb-drupal#readme",
-  "dependencies": {
-    "generator-sb-drupal": "github:mel-miller/generator-sb-drupal"
-  },
   "devDependencies": {
     "@babel/core": "^7.19.0",
     "@storybook/addon-a11y": "^6.5.10",
@@ -37,6 +34,7 @@
     "@storybook/html": "^6.5.10",
     "@storybook/manager-webpack4": "^6.5.10",
     "@storybook/testing-library": "^0.0.13",
-    "babel-loader": "^8.2.5"
+    "babel-loader": "^8.2.5",
+    "generator-sb-drupal": "github:mel-miller/generator-sb-drupal"
   }
 }
