--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Storybook implementation for Drupal.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "gulp": "./node_modules/gulp/bin/gulp.js",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
@@ -34,9 +34,21 @@
     "@storybook/html": "^6.5.10",
     "@storybook/manager-webpack4": "^6.5.10",
     "@storybook/testing-library": "^0.0.13",
+    "autoprefixer": "^10.4.8",
     "babel-loader": "^8.2.5",
+    "cssnano": "^5.1.13",
     "drupal-twig-extensions": "^1.0.0-beta.4",
+    "fs-extra": "^10.1.0",
     "generator-sb-drupal": "github:mel-miller/generator-sb-drupal",
+    "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-minify": "^3.1.0",
+    "gulp-postcss": "^9.0.1",
+    "gulp-rename": "^2.0.0",
+    "gulp-replace": "^1.1.3",
+    "gulp-sass": "^5.1.0",
+    "gulp-sass-glob": "^1.1.0",
+    "sass": "^1.54.9",
     "twig": "^1.15.4",
     "twig-loader": "^0.5.5"
   }
