--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "cssnano": "^5.1.13",
     "drupal-twig-extensions": "^1.0.0-beta.4",
     "fs-extra": "^10.1.0",
-    "generator-sb-drupal": "github:mel-miller/generator-sb-drupal",
+    "generator-sb-drupal": "^0.1.1",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-minify": "^3.1.0",
