--- a/package.json
+++ b/package.json
@@ -1,57 +1,59 @@
 {
-  "name": "sb-drupal",
-  "version": "0.1.0",
-  "description": "A Storybook implementation for Drupal.",
-  "main": "index.js",
-  "scripts": {
-    "gulp": "./node_modules/gulp/bin/gulp.js",
-    "storybook": "start-storybook -p 6006",
-    "develop": "concurrently --raw --kill-others \"npm run gulp\" \"npm run storybook\"",
-    "build:storybook": "build-storybook"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mel-miller/sb-drupal.git"
-  },
-  "keywords": [
-    "Storybook",
-    "Drupal",
-    "Twig"
-  ],
-  "author": "M. Miller",
-  "license": "GPL-3.0-or-later",
-  "bugs": {
-    "url": "https://github.com/mel-miller/sb-drupal/issues"
-  },
-  "homepage": "https://github.com/mel-miller/sb-drupal#readme",
-  "devDependencies": {
-    "@babel/core": "^7.19.0",
-    "@storybook/addon-a11y": "^6.5.10",
-    "@storybook/addon-actions": "^6.5.10",
-    "@storybook/addon-essentials": "^6.5.10",
-    "@storybook/addon-interactions": "^6.5.10",
-    "@storybook/addon-links": "^6.5.10",
-    "@storybook/builder-webpack4": "^6.5.10",
-    "@storybook/html": "^6.5.10",
-    "@storybook/manager-webpack4": "^6.5.10",
-    "@storybook/testing-library": "^0.0.13",
-    "autoprefixer": "^10.4.8",
-    "babel-loader": "^8.2.5",
-    "concurrently": "^7.4.0",
-    "cssnano": "^5.1.13",
-    "drupal-twig-extensions": "^1.0.0-beta.4",
-    "fs-extra": "^10.1.0",
-    "generator-sb-drupal": "^0.1.2",
-    "gulp": "^4.0.2",
-    "gulp-concat": "^2.6.1",
-    "gulp-minify": "^3.1.0",
-    "gulp-postcss": "^9.0.1",
-    "gulp-rename": "^2.0.0",
-    "gulp-replace": "^1.1.3",
-    "gulp-sass": "^5.1.0",
-    "gulp-sass-glob": "^1.1.0",
-    "sass": "^1.54.9",
-    "twig": "^1.15.4",
-    "twig-loader": "^0.5.5"
-  }
+	"name": "sb-drupal",
+	"version": "0.1.0",
+	"description": "A Storybook implementation for Drupal.",
+	"main": "index.js",
+	"scripts": {
+		"gulp": "./node_modules/gulp/bin/gulp.js",
+		"storybook": "start-storybook -p 6006",
+		"develop": "concurrently --raw --kill-others \"npm run gulp\" \"npm run storybook\"",
+		"build:storybook": "build-storybook"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/mel-miller/sb-drupal.git"
+	},
+	"keywords": [
+		"Storybook",
+		"Drupal",
+		"Twig"
+	],
+	"author": "M. Miller",
+	"license": "GPL-3.0-or-later",
+	"bugs": {
+		"url": "https://github.com/mel-miller/sb-drupal/issues"
+	},
+	"homepage": "https://github.com/mel-miller/sb-drupal#readme",
+	"devDependencies": {
+		"@babel/core": "^7.19.0",
+		"@storybook/addon-a11y": "^6.5.10",
+		"@storybook/addon-actions": "^6.5.10",
+		"@storybook/addon-essentials": "^6.5.10",
+		"@storybook/addon-interactions": "^6.5.10",
+		"@storybook/addon-links": "^6.5.10",
+		"@storybook/builder-webpack4": "^6.5.10",
+		"@storybook/html": "^6.5.10",
+		"@storybook/manager-webpack4": "^6.5.10",
+		"@storybook/testing-library": "^0.0.13",
+		"autoprefixer": "^10.4.8",
+		"babel-loader": "^8.2.5",
+		"concurrently": "^7.4.0",
+		"cssnano": "^5.1.13",
+		"drupal-twig-extensions": "^1.0.0-beta.4",
+		"fs-extra": "^10.1.0",
+		"generator-sb-drupal": "^0.1.2",
+		"gulp": "^4.0.2",
+		"gulp-concat": "^2.6.1",
+		"gulp-minify": "^3.1.0",
+		"gulp-postcss": "^9.0.1",
+		"gulp-rename": "^2.0.0",
+		"gulp-replace": "^1.1.3",
+		"gulp-sass": "^5.1.0",
+		"gulp-sass-glob": "^1.1.0",
+		"prettier": "^2.7.1",
+		"prettier-plugin-twig-melody": "^0.4.6",
+		"sass": "^1.54.9",
+		"twig": "^1.15.4",
+		"twig-loader": "^0.5.5"
+	}
 }
