update clean dist task

--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
 		"babel-loader": "^8.2.5",
 		"concurrently": "^7.4.0",
 		"cssnano": "^5.1.13",
+		"del": "^6.1.1",
 		"drupal-twig-extensions": "^1.0.0-beta.4",
-		"fs-extra": "^10.1.0",
 		"generator-sb-drupal": "^0.1.2",
 		"gulp": "^4.0.2",
 		"gulp-concat": "^2.6.1",
