--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"drupal-attribute": "^1.0.2",
 		"drupal-twig-extensions": "^1.0.0-beta.4",
 		"generator-sb-drupal": "^0.2.0",
+		"glob-parent": "^6.0.2",
 		"gulp": "^4.0.2",
 		"gulp-concat": "^2.6.1",
 		"gulp-minify": "^3.1.0",
@@ -55,6 +56,9 @@
 		"prettier-plugin-twig-melody": "^0.4.6",
 		"sass": "^1.54.9",
 		"storybook-source-code-addon": "^1.2.0",
+		"terser": "^5.15.0",
+		"trim": "^1.0.1",
+		"trim-newlines": "^4.0.2",
 		"twig": "^1.15.4",
 		"twig-loader": "^0.5.5"
 	}
