--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "sb-drupal",
-	"version": "0.2.1-dev.0",
+	"version": "0.2.1",
 	"description": "A Storybook implementation for Drupal.",
 	"main": "index.js",
 	"scripts": {
