--- a/package.json
+++ b/package.json
@@ -41,11 +41,18 @@
 	"devDependencies": {
 		"@csstools/postcss-global-data": "^3.1.0",
 		"@modyfi/vite-plugin-yaml": "^1.1.1",
+		"@storybook/addon-a11y": "^9.1.7",
 		"@storybook/addon-docs": "^9.1.7",
 		"@storybook/html-vite": "^9.1.7",
 		"chokidar-cli": "^3.0.0",
 		"concurrently": "^9.2.1",
 		"cssnano": "^7.1.1",
+		"eslint": "^9.36.0",
+		"eslint-config-prettier": "^10.1.8",
+		"eslint-plugin-prettier": "^5.5.4",
+		"eslint-plugin-storybook": "^9.1.7",
+		"glob": "^11.0.3",
+		"globals": "^16.4.0",
 		"plop": "^4.0.3",
 		"postcss": "^8.5.6",
 		"postcss-cli": "^11.0.1",
@@ -55,11 +62,12 @@
 		"postcss-nested": "^7.0.2",
 		"prettier": "^3.6.2",
 		"prettier-plugin-css-order": "^2.1.2",
+		"rimraf": "^6.0.1",
 		"storybook": "^9.1.7",
-		"vite": "^7.1.6"
-	},
-	"dependencies": {
-		"glob": "^11.0.3",
+		"style-dictionary": "^5.0.4",
+		"twig": "^1.17.1",
+		"twig-drupal-filters": "^3.2.0",
+		"vite": "^7.1.6",
 		"vite-plugin-eslint": "^1.8.1",
 		"vite-plugin-twig-drupal": "^1.6.2"
 	}
