Add compilation for twig files

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
 	"description": "A Storybook implementation for Drupal.",
 	"type": "module",
 	"scripts": {
-		"build": "npm run tokens:build && npm run css:build && vite build",
+		"build": "npm run tokens:build && npm run css:build && npm run twig:build && vite build",
 		"dev": "vite",
-		"develop": "concurrently --raw --kill-others \"npm run storybook\" \"npm run tokens:watch\" \"npm run css:watch\"",
+		"develop": "concurrently --raw --kill-others \"npm run storybook\" \"npm run tokens:watch\" \"npm run css:watch\" \"npm run twig:watch\"",
 		"preview": "vite preview",
 		"storybook": "storybook dev -p 6006",
 		"build-storybook": "storybook build",
@@ -17,6 +17,8 @@
 		"css:clean": "rimraf css",
 		"css:build": "npm run css:clean && postcss src/sb-core.css -o dist/css/sb-core.css",
 		"css:watch": "npm run css:clean && postcss src/sb-core.css -o dist/css/sb-core.css --watch",
+		"twig:build": "node scripts/compile-twig.js",
+		"twig:watch": "node scripts/compile-twig.js --watch",
 		"generate:foundation": "plop foundation",
 		"generate:element": "plop element",
 		"generate:component": "plop component",
