Rename main stylesheet to sb-global

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
 		"tokens:update": "npm run tokens:clean && npm run tokens:build",
 		"tokens:watch": "chokidar 'src/design-tokens/tokens/**/*.json' -c 'npm run tokens:update'",
 		"css:clean": "rimraf css",
-		"css:build": "npm run css:clean && postcss src/sb-core.css -o dist/css/sb-core.css",
-		"css:watch": "npm run css:clean && postcss src/sb-core.css -o dist/css/sb-core.css --watch",
+		"css:build": "npm run css:clean && postcss src/sb-global.css -o dist/css/sb-global.css",
+		"css:watch": "npm run css:clean && postcss src/sb-global.css -o dist/css/sb-global.css --watch",
 		"twig:build": "node scripts/compile-twig.js",
 		"twig:watch": "node scripts/compile-twig.js --watch",
 		"generate:foundation": "plop foundation",
