--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "sb-drupal",
-	"version": "1.0.0",
+	"version": "1.0.0-alpha.1",
 	"description": "A Storybook implementation for Drupal.",
 	"type": "module",
 	"scripts": {
