--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -68,26 +68,40 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
-          # Setup authentication
-          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
-
           # Get the tag name (remove refs/tags/ prefix)
           TAG_NAME=${GITHUB_REF#refs/tags/}
 
-          # Fetch and checkout gh-pages branch (create if doesn't exist)
-          git fetch origin gh-pages:gh-pages 2>/dev/null || git checkout --orphan gh-pages
-          git checkout gh-pages 2>/dev/null || echo "Created new gh-pages branch"
+          # Clone the gh-pages branch in a separate directory
+          cd ..
+          git clone --single-branch --branch gh-pages https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git gh-pages-repo || {
+            echo "gh-pages branch doesn't exist, creating new repo"
+            mkdir gh-pages-repo
+            cd gh-pages-repo
+            git init
+            git remote add origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
+            git config user.name "github-actions[bot]"
+            git config user.email "github-actions[bot]@users.noreply.github.com"
+            git checkout -b gh-pages
+            echo "# GitHub Pages" > README.md
+            git add README.md
+            git commit -m "Initialize gh-pages branch"
+            git push -u origin gh-pages
+            cd ..
+            rm -rf gh-pages-repo
+            git clone --single-branch --branch gh-pages https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git gh-pages-repo
+          }
+
+          cd gh-pages-repo
 
           # Create versioned directory and copy files
           VERSION_DIR="$TAG_NAME"
+          rm -rf "$VERSION_DIR" 2>/dev/null || true
           mkdir -p "$VERSION_DIR"
-          cp -r storybook-static/* "$VERSION_DIR/"
+          cp -r ../sb-drupal/storybook-static/* "$VERSION_DIR/"
 
-          # Add and commit
+          # Add, commit and push
           git add "$VERSION_DIR"
-          git commit -m "Deploy release $TAG_NAME to $VERSION_DIR directory" || echo "No changes to commit"
-
-          # Push to gh-pages
+          git commit -m "Deploy release $TAG_NAME to $VERSION_DIR directory"
           git push origin gh-pages
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -100,23 +114,37 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
-          # Setup authentication
-          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
+          # Clone the gh-pages branch in a separate directory
+          cd ..
+          git clone --single-branch --branch gh-pages https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git gh-pages-repo || {
+            echo "gh-pages branch doesn't exist, creating new repo"
+            mkdir gh-pages-repo
+            cd gh-pages-repo
+            git init
+            git remote add origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
+            git config user.name "github-actions[bot]"
+            git config user.email "github-actions[bot]@users.noreply.github.com"
+            git checkout -b gh-pages
+            echo "# GitHub Pages" > README.md
+            git add README.md
+            git commit -m "Initialize gh-pages branch"
+            git push -u origin gh-pages
+            cd ..
+            rm -rf gh-pages-repo
+            git clone --single-branch --branch gh-pages https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git gh-pages-repo
+          }
 
-          # Fetch and checkout gh-pages branch (create if doesn't exist)
-          git fetch origin gh-pages:gh-pages 2>/dev/null || git checkout --orphan gh-pages
-          git checkout gh-pages 2>/dev/null || echo "Created new gh-pages branch"
+          cd gh-pages-repo
 
           # Create main directory and copy files
           MAIN_DIR="main"
+          rm -rf "$MAIN_DIR" 2>/dev/null || true
           mkdir -p "$MAIN_DIR"
-          cp -r storybook-static/* "$MAIN_DIR/"
+          cp -r ../sb-drupal/storybook-static/* "$MAIN_DIR/"
 
-          # Add and commit
+          # Add, commit and push
           git add "$MAIN_DIR"
-          git commit -m "Deploy main branch to $MAIN_DIR directory" || echo "No changes to commit"
-
-          # Push to gh-pages
+          git commit -m "Deploy main branch to $MAIN_DIR directory"
           git push origin gh-pages
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -128,9 +156,6 @@ jobs:
           # Configure git
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-
-          # Setup authentication
-          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
 
           # Clone the gh-pages branch in a separate directory
           cd ..
@@ -175,12 +200,14 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
-          # Setup authentication
-          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
+          # Clone the gh-pages branch in a separate directory
+          cd ..
+          git clone --single-branch --branch gh-pages https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git gh-pages-repo || {
+            echo "gh-pages branch doesn't exist"
+            exit 0
+          }
 
-          # Fetch and checkout gh-pages branch
-          git fetch origin gh-pages:gh-pages || echo "gh-pages branch doesn't exist"
-          git checkout gh-pages || exit 0
+          cd gh-pages-repo
 
           # Remove PR directory
           PR_DIR="pr-${{ github.event.number }}"
